2007-11-05  Andreas Kupries  <andreask@activestate.com>

	* generic/tclConfig.c (Tcl_RegisterConfig): Modified to not extend
	  the config database if the encoding provided by the user is not
	  found (venc == NULL). Scripts expecting the data will error out,
	  however we neither crash nor provide bogus information. See [SF
	  Tcl Bug 983509] for more discussion.

2007-11-05  Andreas Kupries <andreask@activestate.com>

	* unix/tclUnixChan.c (TtyGetOptionProc): Accepted [SF Tcl Patch
	  1823576] provided by Stuart Cassof <stwo@users.sourceforge.net>.
	  The patch adds the necessary utf/external conversions to the
	  handling of the arguments of option -xchar which will allow the
	  use of \0 and similar characters.

2007-11-03  Miguel Sofer  <msofer@users.sf.net>

	* generic/tclTest.c (TestSetCmd2):
	* generic/tclVar.c (TclObjLookupVarEx): 
	* tests/set.test (set-5.1): fix error branch when array name looks
	like array element (code not normally exercised). 
	
2007-11-01  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* tools/tcltk-man2html.tcl (output-directive): Convert .DS/.DE pairs
	into tables since that is now all that they are used for.

	* doc/RegExp.3: Clarified documentation of RE flags. [Bug 1167840]

	* doc/refchan.n: Adjust internal name to be consistent with the file
	name for reduced user confusion. After comment by Dan Steffen.

	* generic/tclCmdMZ.c (Tcl_StringObjCmd, UniCharIsAscii): Remember,
	the NUL character is in ASCII too. [Bug 1808258]

	* doc/file.n: Clarified use of [file normalize]. [Bug 1185154]

2007-10-30  Don Porter	<dgp@users.sourceforge.net>

	* generic/tcl.h:	Bump version number to 8.5b2.1 to distinguish
	* library/init.tcl:	CVS development snapshots from the 8.5b2
	* unix/configure.in:	release.
	* unix/tcl.spec:
	* win/configure.in:

	* unix/configure:	autoconf (2.59)
	* win/configure:

2007-10-30  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* doc/expr.n, doc/mathfunc.n: Improve documentation to try to make